name:                
version:             0.1.0.0
synopsis:            
license:             
license-file:        
author:              
maintainer:          
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


Library
  ghc-options:         -W -threaded
  exposed-modules:     FileSystem, Types, Parser, Logging                       

  -- other-extensions:
  build-depends:       base,
                       array,
                       mtl,
                       directory
  build-tools:         alex, happy
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       Lexer

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -threaded
  main-is:          Test.hs
  build-depends:    base,
                    mtl,
                    directory,
                    filepath,
                    tasty,
                    tasty-hunit,
                    tasty-quickcheck,
                    process,
                    elsa >= 0.2.1.1,
                    sp22-mock-final
  other-modules:    Common
